<resources>
    // activity home
    <string name="app_name">Semaforo</string>
    <string name="botonAgregar">Agregar equipo</string>
    <string name="botonEditar">Editar</string>
    <string name="botonBorrar">Borrar</string>

    // activity formulario
    <string name="botonAtras">Atras</string>
    <string name="txtDatosContacto">Datos del equipo</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtTelefono">Teléfono</string>
    <string name="smsColorVerdeOn">Sms verde on</string>
    <string name="smsColorVerdeOff">Sms verde off</string>
    <string name="smsColorRojoOn">Sms rojo on</string>
    <string name="smsColorRojoOff">Sms rojo off</string>
    <string name="smsColorNaranjoOn">Sms naranjo on</string>
    <string name="smsColorNaranjoOff">Sms naranjo off</string>
    <string name="botonGuardar">Guardar</string>

    // fragment semaforo
    <string name="lightRed">Luz Rojo</string>
    <string name="lightOrange">Luz Naranjo</string>
    <string name="lightGreen">Luz Verde</string>
    <string name="prevVal">Anterior</string>
    <string name="nextVal">Siguiente</string>
    <string name="nextContact">Siguiente Contacto</string>
    <string name="nameContact">-sample-</string>

</resources>