<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Formulario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".formulario">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="260dp"
        android:layout_height="463dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/personName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtNombre"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/personPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtTelefono"
            android:inputType="phone" />

        <EditText
            android:id="@+id/textSmsVerdeOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/smsColorVerdeOn"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/textSmsVerdeOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/smsColorVerdeOff"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/textSmsNaranjoOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/smsColorNaranjoOn"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/textSmsNaranjoOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/smsColorNaranjoOff"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/textSmsRojoOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/smsColorRojoOn"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/textSmsRojoOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/smsColorRojoOff"
            android:inputType="textPersonName" />


    </LinearLayout>

    <Button
        android:id="@+id/botonGuardar"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/simpleBlue"
        android:drawableLeft="@drawable/ic_baseline_save_24"
        android:text="@string/botonGuardar"
        android:textColor="@color/simpleWhite"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>